# pxg_project

./: .gitignore  README.md  pencil-new.pen
docker/: docker-compose-full.yml  docker-compose-infra.yml  docker-compose-monitoring.yml  init-minio.sh  init-nacos.sh
docker/init-db/: 01-schemas.sql  02-system.sql  03-model.sql  04-cdr.sql  05-rdr.sql  06-audit.sql  07-ods-schema.sql  08-ods-mimic3.sql  09-ods-mimic4.sql  10-cdr-patch.sql  11-ods-reduce.sql  12-cdr-etl.sql  13-cdr-datasource-type.sql  13-cdr-etl-edge.sql  14-smart-search-fts.sql  15-disease-cohort.sql  16-personal-task.sql  17-masterdata.sql
docker/nacos-config/: maidc-aiworker-dev.yaml  maidc-auth-dev.yaml  maidc-gateway-dev.yaml  maidc-model-dev.yaml  maidc-shared.yaml
docker/nginx/: nginx.conf
docker/postgres-zhparser/: Dockerfile
docs/: deployment-guide.md
docs/dev/: 01-architecture.md  02-api-contract.md  04-backend-guide.md  (+3 more)
maidc-parent/: .gitignore  pom.xml
maidc-parent/maidc-aiworker/: Dockerfile  pyproject.toml
maidc-parent/maidc-aiworker/app/: main.py
maidc-parent/maidc-aiworker/app/api/: health.py  inference.py  serving.py  workers.py
maidc-parent/maidc-aiworker/app/core/: celery_app.py  config.py
maidc-parent/maidc-aiworker/app/tasks/: evaluation.py  inference_batch.py  preprocessing.py
maidc-portal/: .env.development  .env.production  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
monitoring/: prometheus.yml
scripts/: compact-docker.ps1  e2e-test.sh  e2e-tests.sh  import_cdr_data.py  install-embulk.sh  performance-test.md  vacuum-reclaim.sh
(+902 files in other folders)
