[tool.poetry]
name = "maidc-aiworker"
version = "1.0.0"
description = "MAIDC AI Worker Service - FastAPI + Celery"
authors = ["MAIDC Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
celery = {extras = ["rabbitmq"], version = "^5.3.6"}
pydantic = "^2.6.0"
pydantic-settings = "^2.2.0"
httpx = "^0.27.0"
minio = "^8.5.9"
numpy = "^1.26.0"
pillow = "^10.2.0"

[tool.poetry.group.gpu]
optional = true

[tool.poetry.group.gpu.dependencies]
torch = "^2.2.0"
torchvision = "^0.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
